# procoli

./: .gitignore  CITATION.cff  EDE_scf_base.ipynb  LCDM_tests.ipynb  LCDM_tests.py  LCDM_v2_test.ipynb  LICENSE.txt  MCMC_minimizer.ipynb  MP_classes_lkl_prof_functions.py  MP_lkl_prof.ipynb  MP_to_Cobaya.ipynb  MP_to_Cobaya_functions.ipynb  MP_to_Cobaya_functions.py  Multimodal_z_c_TLS.ipynb  README  README.md  classes_lkl_prof_functions.ipynb  example_bash_script.sh  example_run.ipynb  example_run.py  lcdm_example.ipynb  lcdm_test_MP_lkl_prof.ipynb  lkl_prof_functions.ipynb  lkl_prof_functions.py  multimodal_algo_VP.py  pyproject.toml  toy_lkl_profile.ipynb  yashvi_chi2.ipynb
lcdm_example/: 2022-07-12_100000__2.txt  2022-07-12_100000__3.txt  2022-07-12_100000__4.txt  2022-07-12_100000__5.txt  2022-07-12_100000__6.txt  2022-07-12_10__1.txt  lcdm_example.bestfit  lcdm_example.covmat  lcdm_example_+H0_lkl_prof.bestfit  lcdm_example_+H0_lkl_profile.txt  lcdm_example_+H0_time_stamps.txt  lcdm_example_-H0_lkl_prof.bestfit  lcdm_example_-H0_lkl_profile.txt  lcdm_example_-H0_time_stamps.txt
lcdm_example/chi2_per_exp/: 2024-01-06_1_.paramnames  2024-01-06_1__10.txt  2024-01-06_1__11.txt  2024-01-06_1__12.txt  2024-01-06_1__13.txt  2024-01-06_1__14.txt  2024-01-06_1__15.txt  2024-01-06_1__16.txt  2024-01-06_1__17.txt  2024-01-06_1__18.txt  2024-01-06_1__19.txt  2024-01-06_1__2.txt  2024-01-06_1__20.txt  2024-01-06_1__21.txt  2024-01-06_1__22.txt  2024-01-06_1__3.txt  2024-01-06_1__4.txt  2024-01-06_1__5.txt  2024-01-06_1__6.txt  2024-01-06_1__7.txt  2024-01-06_1__8.txt  2024-01-06_1__9.txt  2024-01-07_1__1.txt  2024-01-07_1__11.txt  2024-01-07_1__12.txt  2024-01-07_1__13.txt  2024-01-07_1__14.txt  2024-01-07_1__17.txt  2024-01-07_1__18.txt  2024-01-07_1__19.txt  2024-01-07_1__2.txt  2024-01-07_1__20.txt  2024-01-07_1__21.txt  2024-01-07_1__22.txt  2024-01-07_1__23.txt  2024-01-07_1__24.txt  (+17 more)
lcdm_tests_output/: glob_min_doubl_steps_lcdm_cmb_bao_sne__n_lkl_profile.txt  glob_min_doubl_steps_lcdm_cmb_bao_sne__p_lkl_profile.txt  glob_min_lcdm_cmb_bao_sne__n_lkl_profile.txt  glob_min_lcdm_cmb_bao_sne__n_time_stamps.txt  glob_min_lcdm_cmb_bao_sne__p_lkl_profile.txt  glob_min_lcdm_cmb_bao_sne__p_time_stamps.txt  lcdm_cmb_bao_sne_.1.txt  lcdm_cmb_bao_sne_.2.txt  lcdm_cmb_bao_sne_.3.txt  lcdm_cmb_bao_sne_.4.txt  lcdm_cmb_bao_sne_.5.txt  lcdm_cmb_bao_sne_.6.txt  lcdm_cmb_bao_sne_.checkpoint  lcdm_cmb_bao_sne_.covmat  lcdm_cmb_bao_sne_.input.yaml  lcdm_cmb_bao_sne_.minimize.input.yaml  lcdm_cmb_bao_sne_.minimize.updated.yaml  lcdm_cmb_bao_sne_.minimum  lcdm_cmb_bao_sne_.minimum.txt  lcdm_cmb_bao_sne_.progress  lcdm_cmb_bao_sne_.updated.yaml  lcdm_cmb_bao_sne_.yaml  lcdm_cmb_bao_sne__n_lkl_prof.minimize.input.yaml  lcdm_cmb_bao_sne__n_lkl_prof.minimize.updated.yaml  lcdm_cmb_bao_sne__n_lkl_prof.minimum  lcdm_cmb_bao_sne__n_lkl_prof.minimum.txt  lcdm_cmb_bao_sne__n_lkl_profile.txt  lcdm_cmb_bao_sne__n_time_stamps.txt  lcdm_cmb_bao_sne__p_lkl_prof.minimize.input.yaml  lcdm_cmb_bao_sne__p_lkl_prof.minimize.updated.yaml  lcdm_cmb_bao_sne__p_lkl_prof.minimum  lcdm_cmb_bao_sne__p_lkl_prof.minimum.txt  lcdm_cmb_bao_sne__p_lkl_profile.txt  lcdm_cmb_bao_sne__p_time_stamps.txt  no_glob_min_lcdm_cmb_bao_sne__n_time_stamps.txt  no_glob_min_lcdm_cmb_bao_sne__p_lkl_profile.txt
(+97 files in other folders)
