[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["procoli"]  # package names should match these glob patterns (["*"] by default)
exclude = ["procoli.mp_to_cobaya_functions*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = 'procoli'
version = '0.0.1'
authors = [
    { name='Tanvi Karwal', email='karwal@uchicago.edu' },
    { name='Daniel Pfeffer', email='dnpfeffe@gmail.com' }
]
description = 'Put this in here'
readme = 'README.md'
license = {file = 'LICENSE.txt'}
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]

[project.urls]
Homepage = 'https://www.procoli.com'
