[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["procoli"]  # package names should match these glob patterns (["*"] by default)
exclude = ["procoli.mp_to_cobaya_functions*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
procoli = ["data/*.csv"]

[project]
name = 'procoli'
version = '1.0.03'
authors = [
    { name='Tanvi Karwal', email='karwal@uchicago.edu' },
    { name='Daniel Pfeffer', email='dnpfeffe@gmail.com' }
]
description = 'A python package that wraps MontePython to provide profile likelihoods for cosmological datasets'
readme = 'README.md'
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "getdist >= 1.3.2",
    "importlib_resources"
]
license = {file = 'LICENSE.txt'}
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]

[project.urls]
Homepage = 'https://github.com/tkarwal/procoli'
